test_programs/compile_failure/comptime_signed_modulo_by_minus_one_overflow/src/main.nr
fn main() {
    let _ = comptime { -128_i8 % -1 };
}
